updated local storage, spacing, added form and settings. fix mobile nav bar on click

--- a/src/components/communityStats.module.css
+++ b/src/components/communityStats.module.css
@@ -1,3 +1,9 @@
+.table {
+  width: fit-content;
+  margin: auto;
+  margin-top: 10em;
+}
+
 .tableHeader {
   text-align: center;
 }
